fix(history): removing sticky tooltip overlap (#105)

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -642,7 +642,7 @@ nav {
 }
 
 .recent-build:hover .recent-build-tooltip,
-.recent-build-link:focus + .recent-build-tooltip {
+.recent-build:focus .recent-build-tooltip {
   visibility: visible;
 }
 
